# google_test_boilterplate

./: .gitignore  CMakeLists.txt  README.md
cmake/in/: deps.in
docs/: CMakeLists.txt  extra.dox
src/: google_test_boilerplate.hpp
test/: CMakeLists.txt  main.cpp  odr.cpp
